--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -144,6 +144,7 @@
 @import 'components/popover/style';
 @import 'components/post-excerpt/style';
 @import 'components/post-schedule/style';
+@import 'components/preview-card/style';
 @import 'components/progress-bar/style';
 @import 'components/progress-indicator/style';
 @import 'components/pulsing-dot/style';
