--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -225,6 +225,7 @@
 
 .following-manage__search-results.is-empty {
 	margin-top: 10px;
+	word-wrap: break-word;
 }
 
 .following-manage__subscriptions-list.is-empty {
