--- a/client/reader/following-manage/style.scss
+++ b/client/reader/following-manage/style.scss
@@ -225,6 +225,7 @@
 
 .following-manage__search-results.is-empty {
 	margin-top: 10px;
+	word-wrap: break-word;
 }
 
 .following-manage__subscriptions-list.is-empty {
@@ -240,10 +241,17 @@
 	}
 }
 
+.following-manage__url-follow-no-search-results-message {
+	margin-top: -5px;
+	padding-bottom: 15px;
+	color: darken( $gray, 10% )
+}
+
 .following-manage__url-follow {
 	border-bottom: 1px solid lighten( $gray, 30% );
 	padding: 13px 0 10px;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 
 	.follow-button {
