WIP - Domain Connect Authorize Page

--- a/client/my-sites/upgrades/domain-management/style.scss
+++ b/client/my-sites/upgrades/domain-management/style.scss
@@ -411,13 +411,13 @@ input[type=radio].domain-management-list-item__radio {
 	}
 }
 
-.domain-connect-authorize {
+.domain-connect__main {
 	h2 {
 		font-size: 20px;
 		font-weight: 600;
 	}
 
-	.domain-connect-authorize__button {
+	.domain-connect__button {
 		margin-right: 16px;
 		margin-top: 16px;
 	}
