update preview display

--- a/client/components/share/linkedin-share-preview/style.scss
+++ b/client/components/share/linkedin-share-preview/style.scss
@@ -66,6 +66,9 @@
 	transform: translateY(-50%);
 }
 
+.linkedin-share-preview__message-link {
+	text-decoration: none;
+}
 .linkedin-share-preview__message {
 	color: rgba(0, 0, 0, 0.85);
 	display: -webkit-box;
