--- a/client/my-sites/upgrades/domain-management/style.scss
+++ b/client/my-sites/upgrades/domain-management/style.scss
@@ -462,6 +462,10 @@ input[type=radio].domain-management-list-item__radio {
 			opacity: 0.2;
 			cursor: not-allowed;
 		}
+
+		&:last-child {
+			border-bottom: 1px solid $gray-light;
+		}
 	}
 
 	.domain-connect__dns-list-type {
