Editor: tweak Revisions so doesn't look like an accordion

--- a/client/post-editor/editor-revisions/style.scss
+++ b/client/post-editor/editor-revisions/style.scss
@@ -2,9 +2,9 @@
 	color: $gray-text;
 	display: block;
 	font-size: 13px;
-	margin: 16px -16px -16px;
-	padding: 16px;
-	border-top: 1px solid darken( $sidebar-bg-color, 5% );
+	margin: 0 0 -16px;
+	padding: 16px 0;
+	bxorder-top: 1px solid darken( $sidebar-bg-color, 5% );
 
 	&:visited {
 		color: $gray-text;
