Build out dashboard setup fledgling (no-orders-yet) view

--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -21,6 +21,10 @@
 	@import 'components/list/style';
 	@import 'components/table/style';
 	@import 'app/dashboard/style';
+	@import 'components/basic-widget/style';
+	@import 'components/share-widget/style';
+	@import 'components/reading-widget/style';
+	@import 'components/widget-group/style';
 
 	.components__action-header {
 		width: 100%;
