--- a/client/extensions/woocommerce/components/form-dimensions-input/style.scss
+++ b/client/extensions/woocommerce/components/form-dimensions-input/style.scss
@@ -2,20 +2,23 @@
 	display: flex;
 	justify-content: flex-start;
 	flex-wrap: wrap;
+
+	&.no-wrap {
+		flex-wrap: nowrap;
+
+		.form-dimensions-input__length,
+		.form-dimensions-input__width {
+			border-bottom-width: 1px;
+		}
+	}
+
 	@include breakpoint( ">480px" ) {
 		flex-wrap: nowrap;
-	}
 
-	.form-text-input-with-affixes {
-		flex-grow: 2;
-		flex-direction: row;
-	}
-
-	.form-text-input-with-affixes__suffix {
-		@include breakpoint( "<480px" ) {
-				border-left: none;
-				border-top: 1px solid lighten( $gray, 20% );
-			}
+		.form-text-input-with-affixes {
+			flex-grow: 2;
+			flex-direction: row;
+		}
 	}
 
 	.form-dimensions-input__length,
