min height < 660px

--- a/client/blocks/reader-subscription-list-item/style.scss
+++ b/client/blocks/reader-subscription-list-item/style.scss
@@ -1,6 +1,12 @@
 .reader-subscription-list-item {
 	display: flex;
 	flex-direction: row;
+
+	&.has-email-settings {
+		@include breakpoint( "<660px" ) {
+			min-height: 56px;
+		}
+	}
 }
 
 .reader-subscription-list-item__byline {
