WIP - Added sub-components

--- a/client/my-sites/upgrades/domain-management/style.scss
+++ b/client/my-sites/upgrades/domain-management/style.scss
@@ -602,7 +602,7 @@ input[type=radio].domain-management-list-item__radio {
 		padding-top: 10px;
 	}
 
-	.is-placeholder {
+	.domain-connect__is-placeholder {
 		span {
 			@include placeholder( 23% );
 
@@ -677,7 +677,7 @@ input[type=radio].domain-management-list-item__radio {
 		}
 	}
 
-	.is-placeholder {
+	.domain-connect__is-placeholder {
 		span{
 			@include placeholder( 23% );
 
