--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -160,6 +160,7 @@
 @import 'components/seo/style';
 @import 'components/share/facebook-share-preview/style';
 @import 'components/share/google-plus-share-preview/style';
+@import 'components/share/tumblr-share-preview/style';
 @import 'components/share/twitter-share-preview/style';
 @import 'blocks/upgrade-nudge-expanded/style';
 @import 'components/seo/preview-upgrade-nudge/style';
