--- a/client/my-sites/upgrades/domain-management/style.scss
+++ b/client/my-sites/upgrades/domain-management/style.scss
@@ -445,79 +445,9 @@ input[type=radio].domain-management-list-item__radio {
 			}
 		}
 	}
-}
 
-.domain-connect__dns-list {
-	ul {
-		list-style: none;
-		margin: 15px 0 1.5em 0;
-		padding: 0;
-
-		li {
-			border-top: 1px solid $gray-light;
-			display: flex;
-			justify-content: space-between;
-			overflow: auto;
-			padding: 10px 0;
-			position: relative;
-
-			em {
-				color: $gray-text-min;
-				display: block;
-				font-size: 11px;
-			}
-
-			label {
-				background: $gray;
-				border-radius: 2px;
-				color: $white;
-				display: block;
-				font-size: 12px;
-				margin: 0 10px 0 0;
-				padding: 10px 5px;
-				text-align: center;
-			}
-
-			strong {
-				color: $gray-text-min;
-				font-weight: normal;
-			}
-
-			&.is-disabled {
-				opacity: 0.2;
-				cursor: not-allowed;
-			}
-
-			&:last-child {
-				border-bottom: 1px solid $gray-light;
-			}
-		}
-
-		.domain-connect__dns-list-type {
-			min-width: 60px;
-		}
-
-		.domain-connect__dns-list-info {
-			width: 100%;
-			word-break: break-all;
-		}
-	}
-
-	.domain-connect__is-placeholder {
-		span{
-			@include placeholder( 23% );
-
-			display: inline-block;
-
-			&:first-child {
-				width: 35%;
-			}
-
-			&:last-child {
-				float: right;
-				width: 22px;
-			}
-		}
+	ul.domain-connect__dns-list {
+		margin-bottom: 1.5em;
 	}
 }
 
@@ -849,7 +779,9 @@ ul.email-forwarding__list {
 	}
 }
 
-.dns__list > ul {
+.dns__list > ul,
+ul.domain-connect__dns-list
+{
 	list-style: none;
 	margin: 15px 0 0 0;
 	padding: 0;
@@ -890,10 +822,12 @@ ul.email-forwarding__list {
 		}
 	}
 
+	.domain-connect__dns-list-type,
 	.dns__list-type {
 		min-width: 60px;
 	}
 
+	.domain-connect__dns-list-info,
 	.dns__list-info {
 		width: 100%;
 		word-break: break-all;
