Editor: Show confirmation sidebar on publish (#14382)
* Stub for preventing current action

* Show sidebar on publish click

* Remove CSS todo

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -420,6 +420,7 @@
 @import 'post-editor/editor-action-bar/style';
 @import 'post-editor/editor-author/style';
 @import 'post-editor/editor-categories-tags/style';
+@import 'post-editor/editor-confirmation-sidebar/style';
 @import 'post-editor/editor-delete-post/style';
 @import 'post-editor/editor-discussion/style';
 @import 'post-editor/editor-drawer/style';
