--- a/client/blocks/reader-feed-header/style.scss
+++ b/client/blocks/reader-feed-header/style.scss
@@ -116,14 +116,24 @@
 	.reader-feed-header__details {
 		align-self: stretch;
 		font-size: 14px;
-		max-height: 16px * 4;
 		overflow: hidden;
 		text-align: center;
 		position: relative;
 
 		.reader-feed-header__description {
+			display: block;
+			position: relative;
 
+			@include breakpoint ( "<660px" ) {
+				max-height: 16px * 4;
+				overflow: hidden;
 
+				&::after {
+					@include long-content-fade( $size: 15% );
+					height: 16px * 1.3;
+					top: auto;
+				}
+			}
 		}
 	}
 
