--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -415,6 +415,7 @@
 @import 'my-sites/stats/stats-list/style';
 @import 'notices/style';
 @import 'my-sites/upgrades/domain-management/style';
+@import 'my-sites/upgrades/domain-management/email/style';
 @import 'my-sites/upgrades/domain-management/components/icann-verification/style';
 @import 'post-editor/style';
 @import 'post-editor/edit-post-status/style';
