Comments: List View (#14225)
This is the first code iteration of the Comment List, part of the Comment Management effort.

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -283,6 +283,7 @@
 @import 'my-sites/ads/style';
 @import 'my-sites/all-sites/style';
 @import 'my-sites/all-sites-icon/style';
+@import 'my-sites/comments/style';
 @import 'my-sites/current-site/style';
 @import 'my-sites/customize/style';
 @import 'my-sites/domain-tip/style';
