--- a/client/extensions/woocommerce/style.scss
+++ b/client/extensions/woocommerce/style.scss
@@ -14,6 +14,7 @@
 	@import 'components/address-view/style';
 	@import 'components/extended-header/style';
 	@import 'components/form-dimensions-input/style';
+	@import 'components/product-image-uploader/style';
 	@import 'app/settings/shipping/style';
 	@import 'components/list/style';
 	@import 'app/dashboard/style';
