Signup: Use progress bar instead of # steps
Use a visual progress bar, instead of the step numbers.

It's both a better UX and users won't get confused when
we skip steps so they go from 2 to 4.

Test existing flows. Make sure the progress bar makes sense
and nothing is broken.

--- a/client/signup/flow-progress-indicator/style.scss
+++ b/client/signup/flow-progress-indicator/style.scss
@@ -1,11 +1,19 @@
-.flow-progress-indicator {
+.flow-progress-indicator__container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 	color: darken( $gray, 20 );
 	font-size: 14px;
 	font-weight: 300;
 	margin-bottom: -10px;
 	text-align: center;
 
-	@include breakpoint( "<660px" ) {
+	@include breakpoint( '<660px' ) {
 		padding-top: 10px;
 	}
+}
+
+.flow-progress-indicator__progress-bar {
+	width: 50%;
 }
