--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -194,6 +194,7 @@
 @import 'components/seo-preview-pane/style';
 @import 'components/tooltip/style';
 @import 'components/upgrades/credit-card-number-input/style';
+@import 'components/upgrades/google-apps/dialog/style';
 @import 'components/user/style';
 @import 'components/version/style';
 @import 'components/vertical-nav/style';
