--- a/client/signup/flow-progress-indicator/style.scss
+++ b/client/signup/flow-progress-indicator/style.scss
@@ -1,4 +1,4 @@
-.flow-progress-indicator__container {
+.flow-progress-indicator {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -14,6 +14,6 @@
 	}
 }
 
-.flow-progress-indicator__progress-bar {
-	width: 50%;
+.flow-progress-indicator__wizard-bar {
+	width: 20%;
 }
