--- a/client/components/wizard-bar/style.scss
+++ b/client/components/wizard-bar/style.scss
@@ -2,7 +2,7 @@
 	width: 100%;
 	display: inline-block;
 	position: relative;
-	height: 2px;
+	height: 1px;
 	background-color: lighten( $gray, 20% );
 	border-radius: 4.5px;
 	border: 1px solid $white;
@@ -27,6 +27,8 @@
 
 .wizard-bar__indicator-icon {
 	fill: lighten( $blue-dark, 10% );
+	height: 7px;
+	width: 7px;
 }
 
 /* Percentage bar */
