--- a/client/components/wizard-bar/style.scss
+++ b/client/components/wizard-bar/style.scss
@@ -17,12 +17,14 @@
 	background-color: lighten( $blue-dark, 10% );
 	border-radius: 4.5px;
 	transition: width 200ms;
+	transition: all 500ms ease-in;
 }
 
 .wizard-bar__indicator {
 	display: flex;
 	justify-content: flex-end;
 	margin-top: -3px;
+	transition: all 500ms ease-in;
 }
 
 .wizard-bar__indicator-icon {
