--- a/client/reader/_style.scss
+++ b/client/reader/_style.scss
@@ -20,6 +20,12 @@
 	}
 }
 
+.is-reader-page .follow-button {
+	border: 0;
+	border-radius: 0;
+	float: right;
+}
+
 .is-reader-page .reader-full-post__story-content {
 	margin-top: 0;
 }
