--- a/client/components/upgrades/google-apps/google-apps-dialog/style.scss
+++ b/client/components/upgrades/google-apps/google-apps-dialog/style.scss
@@ -2,72 +2,80 @@
 // Google Apps
 //
 
-// The `form` selector adds specificity to override the padding from the
-// `.card` class.
-form.google-apps-dialog {
-
-	.google-apps-dialog__product-details {
-
+.google-apps-dialog__product-details {
+	@include breakpoint( ">960px" ) {
+		display: flex;
 	}
+}
 
-	.google-apps-dialog__product-name {
-		color: #888;
-		font-size: 25px;
-		font-weight: 100;
+.google-apps-dialog__product-intro {
+	@include breakpoint( ">960px" ) {
+		max-width: 350px;
+		margin-right: 50px;
+	}
+}
+
+.google-apps-dialog__product-name {
+	color: #888;
+	font-size: 25px;
+	font-weight: 100;
+	margin: 0;
+}
+
+.google-apps-dialog__product-logo {
+	background: url('/calypso/images/upgrades/g-suite-logo.png') no-repeat left;
+	background-size: 73px;
+	display: inline-block;
+	height: 19px;
+	text-indent: -999999px;
+	vertical-align: text-top;
+	width: 73px;
+}
+
+.google-apps-dialog__header {
+	text-align: center;
+
+	.google-apps-dialog__title {
+		color: $gray-dark;
+		font-weight: 600;
 		margin: 0;
 	}
+}
 
-	.google-apps-dialog__product-logo {
-		background: url('/calypso/images/upgrades/g-suite-logo.png') no-repeat left;
-		background-size: 73px;
-		display: inline-block;
-		height: 19px;
-		text-indent: -999999px;
-		vertical-align: text-top;
-		width: 73px;
+.google-apps-dialog__no-setup-required {
+	color: lighten( $gray-dark, 20% );
+}
+
+.google-apps-dialog__product-features {
+	color: $gray-dark;
+	font-size: 13px;
+	line-height: 130%;
+	margin: 34px 0 1em;
+}
+
+.google-apps-dialog__product-feature {
+	display: flex;
+
+	img {
+		align-self: flex-start;
+		margin-right: 10px;
+		width: 24px;
 	}
+}
 
-	.google-apps-dialog__header {
-		text-align: center;
+.google-apps-dialog__price-per-user {
+	color: $blue-medium;
+	font-size: 18px;
+	font-weight: 600;
+}
 
-		.google-apps-dialog__title {
-			color: $gray-dark;
-			font-weight: 600;
-			margin: 0;
-		}
-	}
+.google-apps-dialog__billing-period {
+	color: $gray;
+	font-size: 13px;
+	text-transform: uppercase;
+}
 
-	.google-apps-dialog__no-setup-required {
-		color: lighten( $gray-dark, 20% );
-	}
-
-	.google-apps-dialog__file-storage,
-	.google-apps-dialog__professional-email {
-		color: darken( $gray, 10% );
-		font-size: 13px;
-		font-weight: 600;
-		line-height: 130%;
-	}
-
-	.google-apps-dialog__professional-email {
-		border-bottom: 1px solid darken( $gray-light, 10% );
-		display: inline-block;
-		margin-bottom: 8px;
-		padding-bottom: 12px;
-	}
-
-	.google-apps-dialog__price-per-user {
-		color: $blue-medium;
-		font-size: 18px;
-		font-weight: 600;
-	}
-
-	.google-apps-dialog__billing-period {
-		color: lighten( $gray, 10% );
-		font-size: 12px;
-		text-transform: uppercase;
-	}
-
+form.google-apps-dialog {
 	.notice li {
 		list-style: disc;
 	}
