--- a/client/my-sites/upgrades/domain-management/email/style.scss
+++ b/client/my-sites/upgrades/domain-management/email/style.scss
@@ -76,9 +76,13 @@
 
 .add-google-apps-card__title {
 	color: $gray-dark;
-	font-size: 16px;
+	font-size: 24px;
 	line-height: 120%;
 	margin: 0 0 10px 0;
+}
+
+.add-google-apps-card__sub-title {
+	font-size: 18px;
 }
 
 .add-google-apps-card__logos {
