Use 2x image for top section and center align it

--- a/client/my-sites/upgrades/domain-management/email/style.scss
+++ b/client/my-sites/upgrades/domain-management/email/style.scss
@@ -86,7 +86,11 @@
 }
 
 .add-google-apps-card__logos {
+	align-items: center;
+	display: flex;
+	flex-grow: 1;
 	margin-left: 100px;
+	justify-content: center;
 
 	@include breakpoint( "<960px" ) {
 		display: none;
