Framework: Preload Moment locale data when selected language different than `en`

--- a/server/pages/index.jade
+++ b/server/pages/index.jade
@@ -132,12 +132,16 @@ html(lang=lang, dir=isRTL ? 'rtl' : 'ltr', class=isFluidWidth ? 'is-fluid-width'
 			script(src=urls[ 'manifest' ])
 			script(src=urls[ 'vendor' ])
 			script(src=urls[ jsFile ])
+			if localeFile
+				script(src=urls[ localeFile ])
 			if chunk
 				script(src=urls[ chunk ])
 		else
 			script(src=urls[ 'manifest-min' ])
 			script(src=urls[ 'vendor-min' ])
 			script(src=urls[ jsFile + '-min' ])
+			if localeFile
+				script(src=urls[ localeFile + '-min' ])
 			if chunk
 				script(src=urls[ chunk + '-min' ])
 		script(type='text/javascript')!='window.AppBoot();'
