Fix search stream illustration

--- a/client/reader/_style.scss
+++ b/client/reader/_style.scss
@@ -387,7 +387,7 @@
 
 // No Results in new Search
 .is-reader-page .search-stream .empty-content {
-	margin-top: 0;
+	margin-top: 135px;
 }
 
 /* = Infinite scroll end (shown at end of streams)
