--- a/client/reader/_style.scss
+++ b/client/reader/_style.scss
@@ -359,19 +359,22 @@
 
 .is-group-reader .main .empty-content,
 .is-reader-page .main .empty-content {
-	margin-top: -90px;
 	padding-top: 0;
 
-	img {
-		min-height: 150px;
+	.empty-content__title {
+		margin-top: -10px;
 	}
 
-	@include breakpoint( "<480px" ) {
+	&.is-drake {
 		margin-top: -72px;
-	}
 
-	.empty-content__illustration {
-		min-height: 100px;
+		@include breakpoint( ">480px" ) {
+			margin-top: -90px;
+		}
+
+		.empty-content__title {
+			margin-top: 0;
+		}
 	}
 }
 
@@ -384,7 +387,7 @@
 
 // No Results in new Search
 .is-reader-page .search-stream .empty-content {
-	margin-top: 0;
+	margin-top: 135px;
 }
 
 /* = Infinite scroll end (shown at end of streams)
