--- a/client/blocks/reader-recommended-sites/style.scss
+++ b/client/blocks/reader-recommended-sites/style.scss
@@ -95,10 +95,10 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 			padding: 0;
 			position: relative;
 			z-index: 0;
-			top: -2px;
+			top: 8px;
 
-			@include breakpoint( "<660px" ) {
-				top: 8px;
+			@include breakpoint( ">660px" ) {
+				top: -2px;
 			}
 		}
 
