--- a/client/blocks/reader-recommended-sites/style.scss
+++ b/client/blocks/reader-recommended-sites/style.scss
@@ -99,6 +99,11 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 
 			@include breakpoint( ">660px" ) {
 				top: -2px;
+				right: -2px;
+			}
+
+			@media #{$reader-related-card-v2-breakpoint-medium}{
+				right: 0;
 			}
 
 			@media #{$reader-related-card-v2-breakpoint-small}{
