When wrapping elements, render the container inline, to avoid unwanted block-ifying

--- a/client/components/emojify/style.scss
+++ b/client/components/emojify/style.scss
@@ -1,3 +1,7 @@
+.emojify {
+	display: inline;
+}
+
 // Styles recommended by twemoji
 // https://github.com/twitter/twemoji#inline-styles
 .emojify__emoji {
