--- a/client/post-editor/editor-visibility/style.scss
+++ b/client/post-editor/editor-visibility/style.scss
@@ -42,12 +42,28 @@
 		}
 	}
 
+	.gridicons-globe {
+		color: $alert-green;
+	}
+
+	.gridicons-user {
+		color: $alert-yellow;
+	}
+
+	.gridicons-lock {
+		color: $alert-red;
+	}
+
 	.gridicon.is_active {
 		color: $gray-dark;
 
 		&:hover {
 			color: lighten( $gray, 15% );
 		}
+	}
+
+	.is-selected .gridicon {
+		color: #fff;
 	}
 }
 
