--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -225,7 +225,7 @@
 }
 
 .products__product-form-sku {
-		color: $gray;
+		color: $gray-text-min;
 }
 
 .products__variation-settings-link {
@@ -358,7 +358,7 @@
 .products__additional-details-preview-label {
 	text-transform: uppercase;
 	font-size: 11px;
-	color: $gray;
+	color: $gray-text-min;
 }
 
 .products__additional-details-preview-title {
