--- a/client/extensions/woocommerce/app/settings/payments/style.scss
+++ b/client/extensions/woocommerce/app/settings/payments/style.scss
@@ -8,7 +8,7 @@
 	p.payments__method-suggested {
 		font-size: 11px;
 		text-transform: uppercase;
-		color: $gray;
+		color: $gray-text-min;
 	}
 
 	p.payments__method-suggested,
