--- a/client/extensions/woocommerce/components/extended-header/style.scss
+++ b/client/extensions/woocommerce/components/extended-header/style.scss
@@ -5,7 +5,7 @@
 }
 
 .extended-header__header-description {
-	color: $gray;
+	color: $gray-text-min;
 	font-size: 12px;
 	line-height: 18px;
 	padding-bottom: 8px;
