--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -90,7 +90,8 @@
 		}
 	}
 
-	.form-toggle__wrapper + p.form-setting-explanation.is-indented {
+	.form-toggle__wrapper + p.form-setting-explanation.is-indented,
+	.form-toggle__placeholder + p.form-setting-explanation.is-indented {
 		margin-left: 36px;
 	}
 
