--- a/client/post-editor/editor-confirmation-sidebar/style.scss
+++ b/client/post-editor/editor-confirmation-sidebar/style.scss
@@ -73,12 +73,12 @@
 	justify-content: space-between;
 	flex-direction: row;
 	flex-wrap: wrap;
-
-	position: absolute;
+	position: relative;
 		top: 0;
 		left: 0;
 		right: 0;
 	padding: 9px 24px;
+	width: 100%;
 }
 
 .editor-confirmation-sidebar__cancel {
@@ -104,4 +104,8 @@
 		background: lighten( $alert-green, 20% );
 		border-color: tint( $alert-green, 30% );
 	}
+}
+
+.editor-confirmation-sidebar__content-wrap {
+	padding: 0 24px 24px 24px
 }
