Adjust EditorVisibility dropdown width.

--- a/client/post-editor/editor-visibility/style.scss
+++ b/client/post-editor/editor-visibility/style.scss
@@ -10,7 +10,8 @@
 	text-align: left;
 	width: 100%;
 
-	.select-dropdown {
+	.select-dropdown,
+	.select-dropdown__container {
 		max-width: 100%;
 		width: 100%;
 	}
