--- a/client/blocks/comment-detail/style.scss
+++ b/client/blocks/comment-detail/style.scss
@@ -18,6 +18,15 @@
 	}
 }
 
+.comment-detail__transition-enter {
+	opacity: 0.01;
+
+	&.comment-detail__transition-enter-active {
+		opacity: 1;
+		transition: opacity .15s linear;
+	}
+}
+
 .comment-detail__transition-leave {
 	opacity: 1;
 
