added to devdocs

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -217,6 +217,60 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 	z-index: z-index( 'root', '.search-stream__sort-picker' );
 }
 
+// search-stream-header
+// Posts and Sites SectionNav
+.search-stream .section-nav {
+	background: inherit;
+	border-bottom: 2px solid lighten( $gray, 30% );
+	box-shadow: none;
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+
+.search-stream .section-nav-group {
+	display: flex;
+	flex: 1 0 auto;
+	width: 0;
+
+	@include breakpoint( "<480px" ) {
+		margin-top: 0;
+	}
+}
+
+.search-stream .section-nav-tabs__dropdown,
+.search-stream .section-nav__mobile-header {
+	display: none;
+}
+
+.search-stream .section-nav-tabs__list {
+	display: flex;
+
+	.section-nav-tab.is-selected {
+		border-bottom: 2px solid $gray-dark;
+	}
+
+	.section-nav-tab__link {
+		background-color: transparent;
+		color: $blue-wordpress;
+		padding: 16px;
+
+		&:hover {
+			color: $blue-medium;
+		}
+	}
+
+	.is-selected .section-nav-tab__link {
+		color: $gray-dark;
+	}
+}
+
+.search-stream .section-nav-tab__text {
+	font-weight: 600;
+	font-size: 13px;
+	letter-spacing: .04em;
+	text-transform: uppercase;
+	width: 100%;
+}
 
 .search-stream__headers {
 	color: $gray;
