Add margin to bottom of general jetpack settings div
To avoid it running into Site Tools card

--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -408,3 +408,7 @@
 .site-settings__media-settings > .banner {
 	margin-top: -16px;
 }
+
+.site-settings__general-jetpack {
+	margin-bottom: 16px;
+}
