Site Settings: Use a green checkmark when post type toggle is disabled

--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -199,6 +199,12 @@
 			@include placeholder;
 		}
 	}
+
+	.gridicons-checkmark {
+		margin-right: 12px;
+		vertical-align: bottom;
+		color: $alert-green;
+	}
 }
 
 .site-settings__general-settings,
