Comments: Add actions transitions and notices (#14593)
Introduce in the Comment Management lists both a quick fade out transition for disappearing comments and an undoable global notice in response to actions.

## Changes

- Add `ReactCSSTransitionGroup` to handle a fade out transition on component unmount.
Please note that `ReactCSSTransitionGroup` is deprecated as of React 15.0, and its replacement is tracked in https://github.com/Automattic/wp-calypso/issues/13321.

- Add global notices in response to actions performed on comments.
  - All notices (except "Delete Permanently") feature an Undo button, that simply fires the `setCommentStatus` method with the previous comment status.
  - Undos don't trigger any notice, and are therefore not undoable directly in the notice (they can of course be undone by via comment action).
  - The notices are not stacked together, but performing multiple actions on the same comment (e.g. `approve -> unapprove -> approve -> etc.`) only displays one single notice containing the last performed action.
In other words, we display one notice top for each actioned comment.
  - The notices are set to last 5 seconds before automatically disappearing.
  - The notices are persistent on route changes.
This is to prevent them to disappear when changing Comment Management list.
The side effect, though, is that undoing a notice while outside the Comment Management would trigger the `setCommentStatus` method of the `CommentList` component, which is not mounted anymore.

--- a/client/blocks/comment-detail/style.scss
+++ b/client/blocks/comment-detail/style.scss
@@ -18,6 +18,24 @@
 	}
 }
 
+.comment-detail__transition-enter {
+	opacity: 0.01;
+
+	&.comment-detail__transition-enter-active {
+		opacity: 1;
+		transition: opacity .15s linear;
+	}
+}
+
+.comment-detail__transition-leave {
+	opacity: 1;
+
+	&.comment-detail__transition-leave-active {
+		opacity: 0.01;
+		transition: opacity .15s linear;
+	}
+}
+
 .comment-detail__author-avatar {
 	flex-shrink: 0;
 }
